--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -13,3 +13,11 @@ spring:
   liquibase:
     enabled: true
     change-log: classpath:db.changelog/db.changelog-master.xml
+
+  jpa:
+    generate-ddl: false
+    #generate-ddl: true
+    hibernate:
+      ddl-auto: none
+      #ddl-auto: create-drop
+    show-sql: true
