--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
-  shell:
-    interactive:
-      enabled: false
+  #shell:
+    #interactive:
+      #enabled: false
 
   datasource:
     url: jdbc:h2:mem:testdb
