--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,11 @@
 spring:
 
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: postgres
+    driverClassName: org.postgresql.Driver
+    initialization-mode: always
 
   h2:
     console:
@@ -19,3 +23,6 @@ spring:
       ddl-auto: none
       #ddl-auto: create-drop
     show-sql: true
+
+security:
+  enable: false
